Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -1,15 +1,17 @@
-# 第2章 日本語デジタルテキストの書き方
+# 2　日本語デジタルテキストの作り方
 > この章で、日本語デジタルテキストの基礎、および組版・テキストレイアウトの観点での日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。
 
-前章で述べたように、デジタルテキストにおいては、書き手が組版の大きな部分を担っているので、書き手が意図通りのデジタルテキストを作る方法を知っていることが重要である。このために書き手が気をつけるべきことをこの章にまとめた。またこの章は同時に以降の章のための基礎となる。
+前章で述べたように、デジタルテキストにおいては、書き手が組版の大きな部分を担っているので、書き手が意図通りのデジタルテキストを作る方法を知っていることが重要である。
+
+この章で説明するが、デジタルテキストで重要なことは、目の前のテキストの見かけが正しければ全て良し、というわけではない、ということだ。
+
+このために書き手が気をつけるべきことをこの章にまとめた。同時にこの章は以降の章のための基礎となる。
 
 現代においては非日本語話者が日本語を取り扱う必要のあることも増えている。ゆえ、必要な日本語の基礎もカバーすることとする。
 
 > デバイスやスタイルが変わった時を意識して、困らない書き方をしてくださいね。余計なことしないでね。という内容を書けば良い。dos and don’ts を具体的に。
 
-> ワープロ的な、フォントの選択、段落スタイルや縦書き横書きの話を章を分ける。
-
-> snsや書き込みなど vs 小説など。
+> snsや書き込みなど vs 小説など。文のスタイルの違い。
 
 ## 2.1 デジタルデバイス上の日本語書き言葉の基礎
 > 2.1はデジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。日本語にネイティブでない人が対象だが、日本人でも発見があるかもしれない。以降の章に役に立つことを主眼に。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
@@ -20,15 +22,22 @@
 
 日本語では、ほとんどの漢字が複数の読みを持っている。さらに、複合語や固有名詞では、その読みが個々の漢字の読みから乖離していることがある。多くの場合、漢字の読みは文脈から判断できるが、専門用語などで読み方が広く知られていなかったり、特に固有名詞では、真に曖昧で書かれたものだけでは読みを特定できないことがある。
 
-このため、日本語では、漢字に対する読みを示して読むのを助けるためにルビを使用したり、名前や住所を記入するフォームでは漢字と読みの両方を入力するなどの方法が発展してきた。これらの方法が示すように、日本語は、書き言葉とその読みが二重構造を部分的に作っている。
+このため、日本語では、漢字に対する読みを示して読むのを助けるためにルビを使用したり、名前や住所を記入するフォームでは漢字と読みの両方を入力するなどの方法が発展してきた。これらが示すように、日本語には、書き言葉とその読みが二重構造を作っている（部分がある：全体ではないとのコメントがあったが、二重構造があると言うために全体である必要はない。多言語には存在しないルビやふりがな欄の存在が十分な証左である）。
 
 歴史的に日本語は文字を縦方向に並べて書いたが、西洋の数字や単語の影響で横書きもなされるようになった。デジタルデバイスにおいては横書きが主流である。
 
 ## 2.2 日本語デジタルテキストに使用する文字
 > それぞれの文字に関する基礎知識。非日本語話者にとって以降の議論を理解するベースとなると共に、日本語話者にとっても興味深い基礎となることを期待する。ただし教科書でも学術書でもないのでさらっと簡潔に。
 
+> フォントについては後の章で説明するが、必要があればここでも触れる。たとえば全角。
+
+### 和字
+ひらがな、カタカナ、漢字は伝統的に日本語に使われてきた文字であり、これらをまとめて「和字」と呼ぶ。デジタルデバイス上の多くのフォントで和字は全角幅と呼ばれる固定の幅を持つ。全角幅については後に詳しく説明する。全角幅を持つ文字を全角文字と呼ぶ。
+
 ### ひらがなとカタカナ
-ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本語独自の表音文字である。ひらがなとカタカナは一対一に対応しており、同じ音にひらがなとカタカナが一つづつある。現代日本語では、基本となる46文字、これに発音を変えるダイアクリティカルマークである濁点と半濁点、同じく発音を変える小書と呼ばれる基本の文字を小さくした文字が組み合わさる。ひらがな、カタカナの両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための付記のために漢字の形の一部を利用して生まれた。
+ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本語独自の表音文字である。ひらがなとカタカナは一対一に対応しており、同じ音にひらがなとカタカナが一つづつある。現代日本語では、基本となる46文字、これに発音を変えるダイアクリティカルマークである濁点と半濁点、同じく発音を変える小書と呼ばれる基本の文字を小さくした文字が組み合わさる。
+
+ひらがな、カタカナの両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための付記のために漢字の形の一部を利用して生まれた。
 
 先に触れたように現代日本語においてひらがなは機能語として主に漢字で書かれる内容語を繋げ、または活用語の活用語尾となる。この役目のために、日本語はしばしば漢字とひらがなの繰り返しのリズムを作る。ひらがなはまた、内容語を示したり、読みの難しい漢字の読みを示すのに用いられる。
 
@@ -39,19 +48,20 @@
 #### side note: 変体仮名
 仮名は漢字の続け字の形から生まれて音だけが残ったものであり、一つの発音に対応する仮名文字が複数あった。明治33年（1900）に一つの発音に一つの文字に統一されたが（これ知らない人多い）、統一以前の仮名は現代でも使用例がある。古都京都の街を歩くと店舗の名前などで出会うことができるだろう。xxxx年にUnicodeにも加わった。
 
-#### side note: 非標準的な濁音半濁音つき仮名
-ベースの仮名に濁音を組み合わせた文字は20文字あるが、これらの伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）合成半濁音（U+309A）を置く。
+#### side note: 非標準的な濁音つき仮名
+ベースの仮名に濁音を組み合わせた文字は20文字あるが、これらの伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）を置く。
+
+2024年時点で、標準的なフォントにはこれらの非標準的な濁音付き仮名は含まれないが、合成文字の自動合成により、多くの環境で期待通りに表示される。ただし、これは環境によるので注意が必要である。漫画用フォントなどでは最適化された合成済みグリフを持っている。
 
 ###  漢字
-漢字は中国で生まれた表意文字であり、それぞれの文字が一つもしくは複数の概念を表す。非常に多くの文字が存在し、漢字一つ一つが英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると、その多さを理解しやすいだろう。日本語において漢字は主に内容語（content words）を作る。
+漢字は中国で生まれた表意文字であり、それぞれの文字が一つもしくは複数の概念を表す。非常に多くの文字が存在する。漢字一つ一つが英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると、その多さを理解しやすいだろう。日本語において漢字は主に内容語（content words）を作る。
 
 また、既に述べたように多くの漢字や複合語には複数の読みがあり、これが日本語における表記と読みの二重構造を作っている。
 
-### 和字
-ひらがな、カタカナ、漢字は伝統的に日本語に使われてきた文字であり、これらをまとめて「和字」と呼ぶ。デジタルデバイス上の多くのフォントでは和字は全角幅と呼ばれる固定の幅を持つ。全角幅については後に詳しく説明する。全角幅を持つ文字を全角文字と呼ぶ。
-
 ### アラビア数字
-歴史的には数字を漢字で示していたが、現代では数量を表す際にアラビア数字の使用が増えている。一方、熟語や慣用句の中に数字が現れる場合は漢字を使う（間違えやすい例を一つ。また英語の例も一つ：two sides vs 2 sides、a thousand and one nights vs  1001 nights（千一夜物語）、The seven Seas など）
+歴史的には数字を漢字で示していたが、現代では数量を表す際にアラビア数字の使用が増えている。一方、熟語や慣用句の中に数字が現れる場合は漢字を使う。
+
+（間違えやすい例を一つ。また英語の例も一つ：two sides vs 2 sides、a thousand and one nights vs  1001 nights（千一夜物語）、The seven Seas など）
 
 ### 英字
 英字は、西欧語由来の単語や技術的な内容を表すために使用される。また、ブランド名、製品名や企業名などを中心に、外国由来でなくても英字を使用した単語が使われることがあり、略語や記号としても広く利用されている。これらに見られるように、英字は現代日本語の一部として定着している。
@@ -136,8 +146,8 @@
 - 本来の文字と混ぜて使うと視覚的一貫性を損なう。同じ文字でも、幅の異なるものが混在することになり、さらに国際化環境など英数字に和字とは異なるフォントが用いられる場合には文字デザインの一貫性も損なわれる。
 - 英字略語のように一文字一文字読む場合を除き、英単語や英文などに用いると可読性に劣る。
 - 幅が通常の文字に比べて長いため、文字列が長くなる。
-- アクセントの付いたものは存在せず、よってフランス語などアクセント付き文字の必要な単語を表す時には使えない。
-- 全角英数字はURLの構造的部分に使うべきではない。URLの構造的部分は通常の英数字を用いることが規定されており、全角英数字を使うと動作しないなどエラーの原因になる。URL以外でも、HTML/CSSやmarkdownなどの機能的な部分に使用することはできない。
+- アクセントの付いたものは存在せず、よってアクセント付き文字の必要な単語を表す時には使えない。
+- 全角英数字はURLの構造的部分に使うべきではない。URLの構造的部分は通常の英数字を用いることが規定されており、全角英数字を使うと動作しないなどエラーの原因になり、読み手に負担をかけることになる。URL以外でも、HTML/CSSやmarkdownなどの機能的な部分に使用することはできない。
 
 全角英数字には下のような利点がある
 
@@ -170,11 +180,85 @@
 ### 入力プログラムによる支援
 > 正しい約物の選択を支援すること。特に、和文約物と欧文約物の区別、似た形の約物の区別。一番支援が欲しいのが約物なのでここに置いてあるが、場所は他でも。
 
----- 
+## 2.4 日本語書体とフォント
+ここで書体とは文字デザインのカテゴリを指し、フォントとは名前のついた具体的な実装を指す。
 
-# 第3章 基礎的なフォーマッティング
+### 日本語フォントの成り立ち
+先に述べたように日本語は複数の起源を持った文字を使用するので、一つの日本語フォントにはそれら複数の種類の文字が入っている。
 
-## 3.1 段落のスタイル
+多くの日本語フォントで和字は等幅であり、統一した大きさの四辺形の中にデザインされている。この四辺形の、文字を並べる方向の幅、つまり横書きなら横幅、縦書きなら縦幅、を「全角」または「全角幅」と呼び、日本語をレイアウトする際の重要な単位となっている。多くの日本語フォントでこの四辺形は正方形であり、縦書き、横書き両方に使いやすい。縦長、または横長のものもある。
+
+仮名と漢字がそれぞれ幅の異なる等幅のもの、また仮名のみプロポーショナルのもの、全ての和字がプロポーショナルのものも存在する。（これらのフォントに対してこの文書ではそのフォントのU+3000 Ideographic Space全角空白の幅を全角幅と定義している。）
+
+現代日本語は仮名の占める割合が多いので、仮名のデザインを変えることで効果的にテキストの見かけを変えることができる。このため、漢字部分は同じデザインで、仮名のデザインのみ異なるフォントがある。（side note にmac/windowsでの例）
+
+日本語フォントは英字も持っており、それらの英字は和字と使われることを念頭にデザインされている。特にディセントを浅く、重心が仮名や漢字と合うようになっている。（正確で必要十分な記述か確認）
+
+国際化環境では、テキストに単独のフォントではなくフォントのリストを適用することによって、単独のフォントが表示できる文字範囲の制限を取り除いていることが多い。このような場合、英字は和文フォントとは別個のラテン語用フォントから表示されることも多い。また、アプリケーションによっては英字や和字など特定の文字範囲に対して別々のフォントを指定できるようになっているものもある。
+
+### 日本語フォントの文字セット
+フォントによってサポートする文字範囲、特に漢字の範囲が異なる。下のような関連する規格がある。
+
+#### 日本工業規格 JIS
+- JIS X 0213: 固有名詞や書籍での使用を含め、日本語で使用される文字の多くを網羅する、2024年現在で最も大きなJIS文字セット。
+- JIS X 0208: 0213のサブセットであり、比較的小規模の漢字範囲を持つ。固有名詞を除く、日常生活に十分な文字をカバーしている。
+
+#### Adobeの日本語グリフセット規格 Adobe-Japan1
+Adobeの定めた日本語文字セット。Adobe-Japan1 の後のsupplement追補番号のより大きいものはそれ以前のスーパーセットとなっている。
+- AdobeJapan1-5 とそれ以降: JIS X 0213の拡張。
+- AdobeJapan1-4 とそれ以前: JIS X 0208 の拡張。
+
+> JIS X 0213:2004, AdobeJapan1について述べるStd Pro、
+> 10646 annex A のレパートリー、
+
+書籍、固有名詞を含むユーザーコンテンツ、など広範な用途に使うにはJIS X 0213:2004をカバーするものを選ぶのが安全である。
+
+平易な文章やタイトル、デザインなど、平易な文字に限定される場合にはより小さい文字セットで十分な場合が多い。多くのデザイン書体は小さめの文字セットを持っている。
+
+（サイドノート：JIS X 0213:2004をカバーしているかどうかを判定する方法：一般的に、日本語フォントであって、かつ2万字以上のグリフ数を持つものはJIS X 0213をカバーしている。また「xx」という文字がそのフォントで表示されるかどうかも簡便な基準として使える（X0208, X0212に無くて、X0213にあり、かつ中国語フォントでは字形の明らかに異なるものを選ぶ）。AdobeJapan1に準拠したものなら、AdobeJapan1-5以上。ヒラギノはProの付くもの、それ以外はPr5の付くもの）。
+
+ウェブなどの環境において文字数の小さい日本語フォントを使用した場合、そのフォントにカバーされてない漢字が先に述べたフォントリストによって、他の言語、例えば中国語のフォントから表示されることがある。そうすると字形やデザインが異なる字が混ざることになりプロフェッショナルな結果にならないので注意が必要である。
+
+> 豊島先生、「JIS批判の基礎知識」https://joao-roiz.jp/mtoyo/on-JCS/mt-gene.pdf を読む
+
+### 日本語書体の種類
+ゴシック、丸ゴシック、明朝の書体は様々なコンテントに汎用に使える。特別な効果を狙っているので無い限りこれらの書体を使用するべきであろう。フォントに多くの選択肢があり、文字数の揃っているものが多い。
+
+英字と組み合わせやすいのもこれらの書体である。国際化にはこれらの書体を使うべきであろう。ゴシックはSans-serif、丸ゴシックRound Sans-serif、明朝はSerif書体に対応する。
+
+ペンや鉛筆で書いたような書体は、カジュアルなもしくは懐かしい雰囲気を持ち、横書きへの適応性があり、比較的応用範囲が広い。
+
+筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。公的な、権威的な、または古風な雰囲気を持つ。日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であり、文字だけでそれらのコンテキストを想起させる。よってそれぞれのコンテキストを外れて使う場合には明確な意図と注意が必要である。英字との適合性も限定的であり、日本語・和字に限定されたコンテントで使うのが安全。
+
+特殊な用途の書体に、多くの漫画で使われるアンチック、明朝体でありながら手書きの形を模した学参書体、映画の字幕に使われる字幕用書体などがある。
+
+デザイン書体
+
+ 日本語でない漢字フォントに注意。字形の違い。日本語が他の言語の中に現れる場合にも注意。
+
+かな書体
+
+英字書体
+
+一般的に文字サイズの小さい本文にはゴシックや明朝など中庸で抽象度の高い書体を用いる。
+
+### 日本語漢字字形、中国語漢字字形の注意
+
+### 英字書体との合わせ方
+書体、サイズとウェイトの合わせ方。
+
+日本語コンテキストであって特に意図のない場合は、日本語フォントに含まれる英字を使うのが賢明である。そのフォントの和字と使われることを念頭にデザインされているからである。これらの英字は和文との相性が良いように、特に下へのはみ出し（ディセンダ）が小さくデザインされている。
+
+英字が重要な用途において、または国際化環境などでは、英字に対して和字を合わせる必要のある場合がある。この場合の注意点を
+
+
+デザイン：不安なく合わせられるのは、Serifと明朝、Sans-serifとゴシック、Roundと丸ゴシック。他の場合は書体の知識のある人の判断が必要。例えば、筆書系書体が伝統的だからといって、伝統的な英字書体と合うわけでも、また用途が似ているわけでもないのに注意（e.g. 英語筆記体で書いてあるバースデーカードを日本語化する際に行書が最適というわけではない）。またディスプレー書体を含んだテンプレートなどの国際化に注意。例えば、特定の国のスクール風はその他の国のスクール風ではない。
+
+サイズ：従属欧文はディセンダが小さく日本語書体に合わせやすくなっている。任意の欧文と合わせるときのサイズの合わせ方。フォントサイズでは必ずしも合わせられない（サイドノートでcssのプロパティの紹介）。
+
+ウェイト：
+
+## 2.5 段落のスタイル
 段落は意味の単位である。段落（パラグラフ）にはいくつかのスタイルがある。代表的なものを示す。なお、下に示した段落スタイルの名前は特に定まったものがなく、この文書での名前である。
 
 ウェブにはテキストとスタイルを分離するという原則がある。段落においては、テキストを特定の段落スタイル専用に変更することなしに、異なる段落スタイルを適用できるのが理想的である。
@@ -184,7 +268,7 @@
 > 段落、と言うより段落のインデントの方式について述べている？
 
 #### ブロック段落
-各段落の最初の行をインデントせず、段落間に空白行を入れる。ウェブやメール含め、デジタルテキストはこの形式がデフォルトになっていることが多い。ブロック段落では段落の境界を視覚的に捉えやすい。空白行のために文が上下に長くなる。これは紙に印刷する場合にページ数とコストに影響するため重要となるが、デジタルテキストにおいては問題とはならない。
+各段落の最初の行をインデントせず、段落間の間隔を開ける。ウェブやメール含め、デジタルテキストはこの形式がデフォルトになっていることが多い。ブロック段落では段落の境界を視覚的に捉えやすい。段落間の間隔のために文が上下に長くなる。これは紙に印刷する場合にページ数とコストに影響するため重要となるが、デジタルテキストにおいては問題とはならない。
 
 > 日本語、英語、それぞれの印刷でブロック段落を使っているものにはどんなものがあるか？
 
@@ -201,9 +285,11 @@
 この方法は文の折り返した部分がインデントするため、アプリケーションに一行目と二行目以降のインデント量を変更する機能のある場合にのみ可能となる。
 （これは行揃えの種類？）
 
-## 3.2 行揃えのスタイル
+> 注と箇条書き
+
+## 2.6 行揃えのスタイル
 > 厳密には段落のスタイルと分けにくいが、ここでは、強制改行のない一つ付きのテキストからなるテキストが、どのように折り畳まれるか、を行揃えとして扱う。
-> 
+
 #### 両端揃え
 - 字間が行の調整の影響を受ける
 - 行長を全角の整数倍にする必要がある
@@ -224,14 +310,20 @@
 
 #### 千鳥書き
 ニュース原稿、詩、和歌など。次の行の先頭が前の行からインデントされて、次々に行の先頭の位置がずれてゆく方式。日本語の場合、文節などの語句の句切れで行を折り返す。前の行の行末から次の行の行頭への視線の移動が容易で、アクセシビリティに優れていることが知られている（論文）。
+![](2024%E7%B7%B4%E7%BF%92%E7%94%A8%E3%83%8B%E3%83%A5%E3%83%BC%E3%82%B9%E5%8E%9F%E7%A8%BF%E4%BA%AC%E9%83%BD%E9%96%A2%E9%80%A3%20(1)%EF%BC%88%E3%83%88%E3%82%99%E3%83%A9%E3%83%83%E3%82%AF%E3%82%99%E3%81%95%E3%82%8C%E3%81%BE%E3%81%97%E3%81%9F%EF%BC%89.pdf)
 
 #### 均等割付け
 - 両端揃えでは、段落末は成り行きで、行末に揃えないが、均等割付けは段落末を行末位置に揃える。
 
-#### 強制的な改良を伴う揃え
+#### 強制的な改行を伴う揃え
 通常、一つの段落は改行の入らない一続きのテキストであり、表示の柔軟性を確保するためにも強制的な改行は避けるべきである。しかし、文の語句のまとまりに従って強制的に改行する方法の利点もある。語句のまとまりが強調され、文の構造が捉えやすくなる。特に中央揃え、行末揃え、千鳥書きなどで効果的に利用される。固定のフォーマットとなるので、画面の大きさ、特に幅の変化への追従が限定的となる。よって異なる画面サイズに対して複数の改行方法を取る必要のある場合もある。
 
-## 3.3 横書きと縦書き
+## 2.7 ルビ
+> ルビの概説をどこかに。手動自動、ふりがな、カタカナルビ、注的。
+> 著者のテキストにないルビが増えてゆく。自動生成の話題。
+> どんどんつければ良いと言う方向に解釈されないように
+
+## 2.8 横書きと縦書き
 > 縦書きのあること。伝統的なテキストの方向であること。数字や欧米の単語の影響で、横書きが増えたこと。縦書きの問題点を説明（算用数字や英単語などが読みにくくなる）。
 
 > 伝統的な縦書きのスタイルの横書きとの違いを説明。両方の方向に対応したテキストデータを作成するための問題点。横書きを縦書きにする時の問題点、解決方法。
@@ -242,69 +334,6 @@
 3. 片方用に書いたものを両方にそのまま適用
 
 
-## 3.4 日本語書体とフォント
-ここで書体とは文字デザインのカテゴリを指し、フォントとは名前のついた具体的な実装を指す。
-
-### 日本語フォントの成り立ち
-先に述べたように日本語は複数の起源を持った文字を使用するので、一つの日本語フォントにはそれら複数の種類の文字が入っている。
-
-多くの日本語フォントで和字は等幅であり、統一した大きさの四辺形の中にデザインされている。この四辺形の、文字を並べる方向の幅、つまり横書きなら横幅、縦書きなら縦幅、を「全角」または「全角幅」と呼び、日本語をレイアウトする際の重要な単位となっている。多くの日本語フォントでこの四辺形は正方形であり、縦書き、横書き両方に使いやすい。四辺形が縦長の場合には縦書き、横長なら横書きに、一般的には適していると言われるが、さまざまな効果のためそうでない方向に使われることもある。
-
-和字のうち、仮名、漢字はそれぞれ等幅だが、仮名、漢字で幅が異なるもの、また仮名のみプロポーショナルのフォントもある。
-
-（和字が統一した幅になっていない日本語フォントもあるので、この文書ではU+3000 Ideographic Space、全角空白の幅を全角と定義する。（これは専門的すぎ。3章以降に））
-
-現代日本語は仮名の占める割合が多いので、仮名のデザインを変えることで効果的にテキストの見かけを変えることができる。漢字部分は同じデザインで、仮名のデザインのみ異なるフォントがある。（side note にmac/windowsでの例）
-
-日本語フォントは英字も持っており、それらの英字は和字と使われることを念頭にデザインされている。
-
-国際化環境では、テキストに単独のフォントではなくフォントのリストを適用することによって、単独のフォントが表示できる文字範囲の制限を取り除いていることが多い。また、アプリケーションによっては英字と和字に対して別々のフォントを指定できるようになっているものもある。このような場合、英字は和文フォントとは別個のラテン語用フォントから表示されることも多い。
-
-### 日本語フォントの文字セット
-フォントによってサポートする文字範囲、特に漢字の範囲が異なる。
-
-一般的にはJIS X 0213をカバーするものを選ぶのが安全である（サイドノート：一般的に、日本語フォントで2万字以上のグリフ数を持つものはJIS X 0213をカバーしている。AdobeJapan1に準拠したものなら、AdobeJapan1-5以上）。より小さい文字セットの場合、特に固有名詞や稀な漢字を欠く。
-
-平易な文章やタイトル、デザインなど、平易な文字に限定される場合にはより小さい文字セットで十分な場合が多い。多くのデザイン書体は小さめの文字セットを持っている。
-
-ウェブなどの環境において文字数の小さい日本語フォントを使用した場合、このフォントにカバーされてない漢字が先に述べたフォントリストによって、他の言語、例えば中国語のフォントから表示されることがある。そうすると字形やデザインが異なる字が混ざることになりプロフェッショナルな結果にならないので注意が必要である。
-
-> 豊島先生、「JIS批判の基礎知識」https://joao-roiz.jp/mtoyo/on-JCS/mt-gene.pdf を読む
-
-### 日本語書体
-ゴシック、丸ゴシック、明朝の書体は様々なコンテントに汎用に使える。特別な効果を狙っているので無い限りこれらの書体を使用するべきであろう。フォントに多くの選択肢があり、文字数の揃っているものが多い。
-
-英字と組み合わせやすいのもこれらの書体である。国際化にはこれらの書体を使うべきであろう。ゴシックはSans-serif、丸ゴシックRound Sans-serif、明朝はSerif書体に対応する。
-
-ペンや鉛筆で書いたような書体は、カジュアルなもしくは懐かしい雰囲気を持ち、横書きへの適応性があり、比較的応用範囲が広い。
-
-筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。公的な、権威的な、または古風な雰囲気を持つ。日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であるから、基本的にはそれぞれのコンテキストを外れて使わない。
-
-特殊な用途の書体に、アンチック、学参、字幕用がある。
-
-デザイン書体
-
- 日本語でない漢字フォントに注意。字形の違い。日本語が他の言語の中に現れる場合にも注意。
-
-かな書体
-
-英字書体
-
-一般的に文字サイズの小さい本文にはゴシックや明朝など中庸で抽象度の高い書体を用いる。
-
-### 英字書体との合わせ方
-書体、サイズとウェイトの合わせ方。
-
-日本語コンテキストであって特に意図のない場合は、日本語フォントに含まれる英字を使うのが賢明である。そのフォントの和字と使われることを念頭にデザインされているからである。これらの英字は和文との相性が良いように、特に下へのはみ出し（ディセンダ）が小さくデザインされている。
-
-英字が重要な用途において、または国際化環境などでは、英字に対して和字を合わせる必要のある場合がある。この場合の注意点を
-
-
-デザイン：不安なく合わせられるのは、Serifと明朝、Sans-serifとゴシック、Roundと丸ゴシック。他の場合は書体の知識のある人の判断が必要。例えば、筆書系書体が伝統的だからといって、伝統的な英字書体と合うわけでも、また用途が似ているわけでもないのに注意（e.g. 英語筆記体で書いてあるバースデーカードを日本語化する際に行書が最適というわけではない）。またディスプレー書体を含んだテンプレートなどの国際化に注意。例えば、特定の国のスクール風はその他の国のスクール風ではない。
-
-サイズ：従属欧文はディセンダが小さく日本語書体に合わせやすくなっている。任意の欧文と合わせるときのサイズの合わせ方。フォントサイズでは必ずしも合わせられない（サイドノートでcssのプロパティの紹介）。
-
-ウェイト：
 
 ---- 
 ## どこかに書く
