Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -3,9 +3,9 @@
 
 > 冒頭に、非常に簡潔にこの文書は何であるかを書く。
  
-この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
+この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](#)(https://www.w3.org/TR/jlreq/)」を参照のこと。
 
-この文書では、デジタルデバイス上で表示環境やユーザーの好みに合わせた柔軟な表示が可能なテキストを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。本文書はデジタルテキストの日本語組版のために書かれた。
+この文書では、デジタルデバイス上で表示環境やユーザーのニーズに合わせた柔軟な表示が可能なテキストを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。本文書はデジタルテキストの日本語組版のために書かれた。
 
 ## 1. この文書の目的
 > なぜこの文書が必要なのか。簡潔にしかし説得力のある文で。
@@ -18,11 +18,9 @@
 
 技術基盤や周辺環境の違いから、印刷の組版規則をそのままデジタルデバイスに適用しようとすると、さまざまな課題や、不足な点が明らかになる。印刷の組版が目指してきたものはストレスなく読めかつ美しい組版であった。デジタルで目指すべきことも同様であって、印刷の模倣が目的ではない。
 
-本文書はこのような問題意識のもと、従来の規則およびその記述方法に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。
+本文書はこのような背景のもと、従来の規則およびその記述方法に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。
 
-（フォントについての章もある）
-
-デジタルテキストにおいては一人一人のテキストの作り手が組版に大きな役割を担っている。文字、特に約物の選択、文節スタイルの選択、文字のサイズやフォントの選択などが、多くの場合書き手に委ねられている。よって、この文書では書き手のための章を加えた。
+デジタルテキストにおいては一人一人のテキストの作り手が組版の大きな部分を担っている。文字、特に約物の選択、文節スタイルの選択、文字のサイズやフォントの選択などが、多くの場合書き手に委ねられている。よって、この文書では書き手のための章を加えた。また、デジタルテキストの組版においてはフォントの技術的内容が組版に大きな影響を与える。よって本文書ではフォントに関する要件も扱う。
 
 執筆にあたっては、できるだけ理由や背景を説明し、より良い解決方法を考える一助となるようにした。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
@@ -31,11 +29,15 @@
 > これは実装者のためだけではなく、ユーザーにも読んでほしい文書である。上の分は主に実装者視点で書かれているが、ユーザーへの言葉はあるか？
 
 ## 2. 対象読者
-この文書の一番目の対象読者は、「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」と同様、テキストに関わるソフトウェアの設計・実装者である。ソフトウェア開発はグローバル化しているので、日本語の知識のほとんどないエンジニアでも理解できるよう必要な基礎からカバーし、また暗黙に前提とする知識に気を使いながら執筆した。ただし、設計・実装は数々の判断や試行錯誤の連続であり、依然としてそこに深く日本語を理解しているエンジニアの存在が必要であろう。
+この文書の一番目の対象読者は、「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」と同様、テキストに関わるソフトウェアの設計・実装者である。ソフトウェア開発はグローバル化しているので、日本語の知識のほとんどないエンジニアでも理解できるよう必要な基礎からカバーし、また暗黙に前提とする知識に気を使いながら執筆した。また、判断の助けになるように重要度や、それが必要な背景などをできるだけ説明した。ただし、設計・実装は数々の判断や試行錯誤の連続であり、依然としてそこに深く日本語組版を理解するエンジニアの存在が必要であろう。
 
-二番目の読者は、日本語テキストの体裁を扱う人である。ウェブやデジタルデバイスのAPI、デザインツールなどは組版に対して大きな柔軟性を提供するので、目的に沿ったデザインを実現するには日本語組版に対する広範な知識が必要となる。
+二番目の読者は、日本語テキストの詳細な体裁、デザインを扱う人である。ウェブやデジタルデバイスのAPI、デザインツールなどは組版に対して大きな柔軟性を提供するので、目的に沿ったデザインを実現するには日本語組版に対する広範な知識が必要となる。（ただし、一般的な組版の性質や原則を述べるのであって、個別のデザインについては扱わない）
 
-最後の読者は、日本語テキストを書く人である。ここには日本語話者として日常的に日本語を書く人に加え、必ずしも日本語話者ではないがソフトウェアのローカリゼーションを行ったり、国際的な企業でブローシュアなどの印刷物を作る人を含む。デジタルテキストは、多くの場合専門家による校正を経ずに直接組版されるので、書き手自身が文字やフォントの正確な使い方を知っていることは重要である。よって本文書では組版の観点からのテキストの書き方をカバーしている。
+最後の読者は、日本語テキストを書く人である。ここには日本語話者として日常的に日本語を書く人（もうちょっと加える）。また、必ずしも日本語話者ではないが国際的な企業で Webサイトやソフトウェアの日本語へのローカリゼーションを行う人も対象読者として考慮した。デジタルテキストは、多くの場合専門家による校正を経ずに直接組版されるので、書き手自身が文字やフォントの正確な使い方を知っていることは重要である。よって本文書では組版の観点からのテキストの書き方をカバーしている。
+
+> 印刷（PDFを含む）は対象としないが、印刷が目的の場合でも、デジタルデバイスで作成する場合、上記の多くが当てはまるゆえ、参考になる点が多いだろう。
+
+> PDFは印刷であることをどこかで説明したいが、ネガティブな言い方ではなく、デジタルの性質を十分に理解してもらって、その上で、PDFは印刷だなと自然に理解できるコンテキストで。
 
 ## 3. 印刷との技術的な違い
 ここに、デジタルテキストの組版が、印刷とどのように異なるかをまとめる。
@@ -75,6 +77,8 @@
 デジタルテキストには、静的な画像である印刷にはない動的な振る舞いがある。選択、検索、データのコピー＆ペーストなどによる切り貼り、異なったスタイルの適用、異なった環境での表示などがその例である。
 
 このため、デジタルテキストに対しては静的な配置だけではなく、動的な振る舞いを決める必要がある。また、検索や、異なる環境での表示、異なるスタイルの適用などの振る舞いが正しく動くためには、ある特定の状態での見かけが正しいだけでは不足で、データそのものが正しい必要がある。
+
+> 目の前のテキストの見かけが正しければ全て良し、というわけではない、をどこかに。大きな結論の一つ。
 
 ## 4. 技術周辺の違い（社会的要因の変化？）
 ### グローバリゼーション
