.書き方の方針.md を更新

--- a/drafts/.書き方の方針.md
+++ b/drafts/.書き方の方針.md
@@ -7,6 +7,9 @@
 
 JLReqとの違いについては、それらはどこかにまとめてあると有用だと思いますので、専用の章か節を作るのはどうでしょう。
 
+## 完全な記述
+上記と関連しますが、JLReqとの差分や異なり点ではなく、組版の記述はjlreq-dで完結したものにします。
+
 ## 英語やCSS/OpenTypeで確立されている概念・用語に基づいて説明する
 用語は、可能な限り、英語、特にCSSやOpenTypeの記述に使われている用語に基づいて説明したいと思います。日本語と英語で用語がピッタリ合う場合にはそのまま日本の用語を使えます。似た用語はあるが意味にずれがある場合には、できるだけ英語での用語の概念に基づいて説明します。判断が難しい場合もあるかもしれません。概念自身が日本語に独特な場合、例えばルビ、にはもちろんその用語を使います。
 
