--- a/drafts/.書き方の方針.md
+++ b/drafts/.書き方の方針.md
@@ -13,9 +13,9 @@ JLReqとの違いについては、それらはどこかにまとめてあると
 ## 英語やCSS/OpenTypeで確立されている概念・用語に基づいて説明する
 用語は、可能な限り、英語、特にCSSやOpenTypeの記述に使われている用語に基づいて説明したいと思います。日本語と英語で用語がピッタリ合う場合にはそのまま日本の用語を使えます。似た用語はあるが意味にずれがある場合には、できるだけ英語での用語の概念に基づいて説明します。判断が難しい場合もあるかもしれません。概念自身が日本語に独特な場合、例えばルビ、にはもちろんその用語を使います。
 
-これは日本の伝統的な印刷用語や概念を知らないエンジニアや非日本語話者が理解するバリアを減らしたいのが理由の一つです。
+日本の伝統的な印刷用語や概念を知らないエンジニアや非日本語話者が理解するバリアを減らしたいのが理由です。また、特にCSSやOpenTypeでの記述に使われている用語の場合、既にデジタル組版環境のコンテキストの中で理解しやすい用語になっていることが期待できます。
 
-また、特に用語・概念が少しずれている場合、共通の用語を使うことで我々自身がより深く理解できることがあります。例えばベタ組みと聞くと日本語の組版に独特の組み方のように感じられます。実際JLReqではsolid settingという特別な英語を作っていますが、活字のボディを揃えて隙間なく並べてゆく組み方は英語でも全く同じです。そこからの調整にトラッキングやカーニングといった用語があります。この様なことに気づき、情報・記述を整理することで、よりわかりやすい記述が可能になります。
+別の視点の、我々に取っての利点は、特に用語・概念が少しずれている場合、共通の用語を使うことで我々自身がより深く理解できることがあることです。例えばベタ組みと聞くと日本語の組版に独特の組み方のように感じられます。実際JLReqではsolid settingという特別な英語を作っていますが、活字のボディを揃えて隙間なく並べてゆく組み方は英語でも全く同じです。そこからの調整にトラッキングやカーニングといった用語があります。この様なことに気づき、情報・記述を整理することで、よりわかりやすい記述が可能になります。
 
 さらに、日本語にはなかった概念が、日本語でも使われるようになっている例もあります。一つの例はカーニングです。仮名同士や、仮名と約物の間のカーニングペアを持っているフォントもあるようです（palt, kern, apkn）。
 
