--- a/drafts/4_ルビの組版処理.md
+++ b/drafts/4_ルビの組版処理.md
@@ -2,13 +2,13 @@
 
 ## 4.1　はじめに
 
-ルビの字詰め方向の配置処理については，いろいろな処理法が採用されている．そこで，JLReqでは，過去に行われていた処理例を紹介する意味もあり，一つのことに複数の処理方法や，かなり複雑な処理方法を示している．また，ルビ処理では，さまざまなケースが出現し，また，ある要求事項を組版で実現しようとすると矛盾が出てしまう例もある（注の“複雑な処理となる例”参照）．こうした事項まで考慮して自動処理を行うためには，かなり複雑な方法となる（JLRrqの付属書“F　熟語ルビの配置方法”がその例であるが，この方法でもいくつかの問題は残る）．
+ルビの字詰め方向の配置処理については，いろいろな処理法が採用されている．また，ルビ処理では，さまざまなケースが出現し，ある要求事項を組版で実現しようとすると矛盾が出てしまう例もある（注の“複雑な処理となる例”参照）．こうした事項まで考慮して自動処理を行うためには，かなり複雑な方法となる．
 
 注：ルビのいろいろな配置処理　眺望（ちようぼう）を例に，ルビ処理例のいくつかを示す．
 
-そこで，ある程度の品質を確保しながら，機械的な処理に対応した単純化した処理方法を検討する必要がある．ここでは，特に字詰め方向の処理について簡便なルビ処理方法を実現するための方法を，まず示し，それ以外の処理方法も簡単に紹介する．JLReqとは異なり，何を選べばよいか，何が重要であるかを考慮し，主な配置方法を一つに絞ることにした（どのような事項を考慮したかは後述する）．
+そこで，ある程度の品質を確保しながら，機械的な処理に対応した単純化した処理方法を検討する必要がある．ここでは，特に字詰め方向の処理について簡便なルビ処理方法を実現するための方法を，まず示し，それ以外の処理方法も簡単に紹介する．（どのような事項を考慮したかは後述する．）
 
-なお，注としてルビの形式を利用する例も見掛けるようになった．注は参照しやすように近くにあるのは，望ましい方法であり，また，Web等でもルビの形式も処理が利用できるようになったことから，この形式が採用されるようになったと考えられる．しかし，一般にいうルビに比べ，親文字の文字数は多くなり，逆に位置だけが示されていればよい場合もある．また，注となると，文字数も多くなる．主に単語や複合語を親文字とし，ルビ文字列の字数もそれほど多くないルビと同じ処理方法で処理するには無理がある．そこで，ルビ形式での注の処理方法を解説した．
+なお，注としてルビの形式を利用する例も見掛けるようになった．注は参照しやすように近くにあるのは，望ましい方法であり，また，Web等でもルビの形式も処理が利用できるようになったことから，この形式が採用されるようになったと考えられる．しかし，一般にいうルビに比べ，親文字の文字数は多くなり，逆に親文字も位置だけが示されていればよい場合もある．また，注となると，文字数も多くなる．主に単語や複合語を親文字とし，ルビ文字列の字数もそれほど多くないルビと同じ処理方法で処理するには無理がある．そこで，ルビ形式での注の処理方法を解説した．
 
 注：複雑な処理となる例　できるだけ字間を空けないという条件を満たすために，親文字からはみ出したルビを漢字には掛けないが，仮名には掛ける，とする処理方針がある．しかし，前後が同じ仮名又は漢字となる場合はよいとしても，親文字の前が仮名で，後ろが漢字といったときに，ルビ文字の字数によっては見た目のバランスを壊す場合も出てくる（親文字が1字の例を図〓に示す，上側が漢字には掛けないが，仮名に掛けるとした方針で処理した例）．親文字が複数で，親文字全体にルビを対応させる場合でも，同様である（図〓参照）．こうした問題を解決するためには，ルールをさらに追加しないといけない（活字組版では個別箇所のケースに応じて配置位置を工夫していたので，その箇所ごとに適当に処理できた）．
 
@@ -17,8 +17,6 @@
 こうした複雑さは，“できるだけ字間を空けないという条件”は満たさないが，前後の仮名にも，はみ出したルビは掛けないという単純なルールにすれば解決できる．〈注はここまで〉
 
 以下に示したルビの字詰め方向の配置処理については，理想ではないが，誤読されないということを考慮し，例外のあまりでない，また，機械的に処理できる簡便な配置処理方法の一案である．
-
-なお，ここでの用語は，JLReq（日本語組版処理の要件，Requirements for Japanese TextLayout）による．
 
 ## 4.2　ルビの使用例
 
