--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -77,6 +77,8 @@ JLReqでは，日本語の漢字や仮名について，その文字の外枠を
 
 2は，フォントによっては，文字が文字の外枠一杯に設計されたフォントもあるので，こうした場合，慎重に字間を詰める量を決めないといけない．また，この方法は，漢字の字間も詰まるので，場合によっては，隣の漢字と文字面がつながってしまう可能性があり，詰める量にも限界がある．この方法は，あるテキストについて，それを固まりとして表示したい場合や，字間を狭めれば，ある程度は行間も狭くできるので，ある文字サイズで，ある一定量のテキストを，ある領域内に配置する場合にも利用できる．
 
+注　漢字と仮名の字面のサイズ　漢字と仮名の平均的な字面のサイズは，特に一般的な明朝体においては，漢字にくらべ，仮名の方がいくらか小さくデザインされていることが多い．日本語の文章の中では，主要な意味の表現には漢字が使用され，仮名はどちらかといえば，補助的な役割を果たしている．漢字と仮名の字面のサイズが異なる（その他，線や字画の性質もやや異なる）ことにより，漢字がいくらか強調され，単語の区切りを読み取る助けにもなっている．
+
 3の方法としては，以下のような方法がある．
 
 -OpenTypeフォントを選択し，'palt'（横組）又は'vpal'（縦組）の機能を利用する．
