--- a/sandbox/落書き帳.md
+++ b/sandbox/落書き帳.md
@@ -1,7 +1,42 @@
 # 落書き帳
 これはPR(Pull Request)の練習のための場所です。好きに使ってください。
 
-## こんなこともできます
+## フットノート
+これはこのようにする[^1]。あれはあのようにする[^2]。
+
+
+## 表組
 用語|意味
 --|--
 べた|くっつけること
+
+## コメントの特別な形式
+
+コメントをこんな表示にできる
+
+> [!NOTE]
+> 注意書き
+
+> [!TIP]
+> アドバイス
+
+> [!IMPORTANT]
+> これは重要！
+
+> [!WARNING]
+> 警告！
+
+> [!CAUTION]
+> 注意！
+
+これは普通のコメント
+> 普通のコメント
+
+
+
+
+[^1]: その理由はこれ。
+[^2]: あの理由はそれ。
+
+
+
