--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -65,6 +65,8 @@ JLReqでは，日本語の漢字や仮名について，その文字の外枠を
 
 2　並んだ文字の外枠の間（字間）を均一に詰める．1とは逆にしまった文字の配置となる．
 
+注　文字の変形　字間の調整ではないが，文字の字詰め方向の字幅を小さくする変形を行うことで，同一の行長の中に字数を増やして文字を配置できる．文字を変形した場合，文字の外枠の字詰め方向の幅が変わった場合，通常，変形した字幅で文字を密着させて配置していけばよい．つまり，一般的にいえば，等幅のフォントでは，変形した文字について，字幅を全幅として，文字を密着させて配置していけばよい．
+
 3　仮名等において，字形に応じた字幅を設定し，その字幅（文字の外枠）の間を密着させて文字を配置する．通常の場合よりは，仮名の字間が字形にもよるが詰まる．主に仮名の字間を均一に見えるようにする方法である．
 
 4　文字の組合せによって（フォントにもよるが，例えば横組で“ほ”と“は”の並びと，“く”と“り”の並びでは，見た目の字間の印象は異なる）は，特に仮名の場合などで他の字間と比べてアキが大きくなる場合がある．そこで，ラテン文字のカーニングと同様に，予め設定されている文字の組合せに応じたか字間を設定したカーニングテーブルに従って，字間を調節する．
