--- a/drafts/.全角に替わる単位.md
+++ b/drafts/.全角に替わる単位.md
@@ -4,13 +4,17 @@
 ## 3.2　全幅の定義
 > 少々の混乱の可能性のあることを理解しつつ、これを定義する。
 
-Jlreq-dでは従来から使われてきた「全角（=em square?）」に替えて、「全幅（fullwidth）」という単位を次のように定義し、使用する。
+Jlreq-dでは【binn：、字詰め方向（文字を行に配置していく方向）において，幅を示す相対的な単位として】従来から使われてきた「全角（=em square?）【binn：全角（em又はfull-width）】」に替えて、「全幅（fullwidth）」という単位を次のように定義し、使用する。【binn：従来から使われてきた「全角」が何を差すか不明なのですが，JLReqでといえば，full-widthとなり，一般的にいえば“em”ともいえる．】
 
-全幅とはその場所のフォントの和字の字送り幅。全角空白（U+3000）グリフの文字送り方向の幅として測定する。
+全幅【binn：とはその場所の→：そこに使用されている】フォントの和字の字送り幅【binn：字送り幅→文字の外枠の字詰め方向のサイズ．横組では文字の外枠の左右のサイズ、縦組では文字の外枠の左右のサイズとなる】。【binn：全角空白（U+3000）グリフの文字送り方向の幅として測定する。→和字の字送り幅としては，そのフォントの和字間隔（U+3000）を使用する。JIS X 0213では“和字間隔”といっているが，わかりにくかもしれない．】
 
-「全幅」は従来の組版規則で使われてきた「全角」という単位を、ボディーが正方形でないフォントに対しても適用できるよう、字送り方向の幅に限定し一般化したものである。「全角」は正方形であって長体や扁平体の字送り幅を表現できないのに対し、全幅は字送り方向の幅のみを表し、これらのフォントにも適用することができる。また、その測定方法から、漢字と仮名の幅が異なるフォントや、仮名がプロポーショナルなフォントに対しても定義することができる。
+binn：字送りの定義が必要になるので，“字送り”の使用は，できれば避けたい．また，全角空白（U+3000）グリフというのも分かりにくい．また，全幅は，字送りの大きさだけを示すものではない．字幅やアキの大きさも示す．
 
-大多数の日本語フォントでは全幅は全角の大きさに一致する。Unicode / CSS などでfullwidthという用語が全角文字の幅として使用されているので、全幅の英訳としてfullwidthを使用する。
+binn：現在は，文字の外枠（つまりボディ）という説明で字の文字の配置を説明してきた．それを字送りという概念で説明することは可能であるが，文字の外枠（つまりボディ）の原点位置を決めないと，その説明はできない．また原点の位置によって説明が変わるケースがある．実際のフォントの原点の位置は，横組で変わる可能性があり，さらにフォントにより異なる可能性があるというのがNatさんの説明．現実の処理は字送りですので，字送りで説明できれば本当はよいのだが，こうした事情は，文字の外枠（つまりボディ）という概念を使えば，原点がどこであってもよく，その問題を回避できる．それよりもイメージもしやすいという利点があると思います．そもそも四分アキとか八分アキという概念を用いるということは，実際の処理ではないと思います．それは字送りで処理しているでしょう．すべてできるのに，それをしないで，分かりやすさからではないでしょうか？　また，変形した場合など，字幅という説明をしないで，字送りで，すべて説明しようと思えばできる．変形した場合など，どうしても字幅という説明を加えた方が分かりやすくなる，ということではないでしょうか．
+
+「全幅」は従来の組版規則で使われてきた「全角」という単位を、【binn：ボディー→文字の外枠】が正方形でないフォントに対しても適用できるよう、【binn：字送り→字詰め】方向の幅に限定し一般化したものである。「全角」は正方形であって【これもやや不正確な表現】長体や扁平体の字送り幅を表現できないのに対し、全幅は【binn：字送り→字詰め】方向の幅のみを表し【binn：これは全角も同じ】、これらのフォントにも適用することができる。また、その測定方法から、漢字と仮名の幅が異なるフォントや、仮名がプロポーショナルなフォントに対しても定義することができる。【binn：適用はでき，定義はできるが，プロポーショナルなフォントでは，使い道があるかどうかはわからない，と思いますが．つまりプロポーショナルな文字や漢字と仮名の幅が異なる場合に，四分アキといったときに，全角空白（U+3000）の1/4が適切かは不明だと思います．そもそも全角空白（U+3000）の幅がどうなっているか，こうした事情ではわからないのではないか．変形や等幅のフォントでは，はっきりしているので，使い道はある．】
+
+大多数の日本語フォントでは全幅は全角の大きさに一致する【binn：この文，やや正確さに欠けるようにも思いますが】。Unicode / CSS などでfullwidthという用語が全角文字の幅として使用されているので、全幅の英訳としてfullwidthを使用する。【この2文は別段落がよい】【binn：fullwidthという用語はどのように定義されていますか？　fullwidth charactersのことか．つまり，文字種を示すのか，それとも別のことか？　また，JLReqでは“全角”の英訳が“full-width”となっているので，混乱しないか？】
 
 > 下の部分は適宜アップデート
 
