--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -151,6 +151,8 @@ JLReqでは，日本語の漢字や仮名について，その文字の外枠を
 
 文字の外枠が正方形である文字を使用している場合は，通常は括弧類や句読点の字幅，つまり文字サイズを字幅として配置しいけばよい．その結果，字形のデザインにもよるが，括弧類の外側又は句読点の後ろに文字サイズの1/2程度の空白が確保される．等幅のフォントを変形した場合も，これにならって配置すればよい．
 
+注　文字を変形する場合，句点（“。”（U+3002））も変形することになる．この場合，丸の形も変形されるので，この句点だけは除外するという方法もある．
+
 プロポーショナルな文字の場合は，そのフォントで設定されている字幅で配置していけばよい．
 
 ただし，前述したように，見出し等では，括弧類や句読点の前後の空白について，やや詰める方法や，パーレン（小括弧）などでは，文字サイズの1/2ほど詰める配置方法をとる方法も行われている．
