--- a/drafts/.全角に替わる単位.md
+++ b/drafts/.全角に替わる単位.md
@@ -1,29 +1,29 @@
 このファイルには、3.2章 全幅の定義、および、別の章におくべきその背景を収めてある。内容に対してチームの承認があれば、その際にそれぞれ適切な場所に移動する。
 議論は https://github.com/w3c/jlreq-d/discussions/59 で行う。
 
+---
+
 ## 3.2　全幅の定義
-Jlreq-dでは字詰め方向の幅を表す単位として、従来から使われてきた「全角」に替えて、「全幅」を次のように定義し、使用する。
+Jlreq-dでは文字を並べる方向（字詰め方向）の幅を表す単位として、従来から使われてきた「全角」に替えて、これをより一般化した単位「全幅」を次のように定義して使用する。
 
-**「全幅とは、その場所に使用されているフォントに含まれる和字間隔（U+3000）の字詰め方向の幅」**
+**「全幅とは、その場所に使用されているフォントに含まれる和字間隔（U+3000）文字のそのフォントサイズにおける字詰め方向の幅」**
 
-「全幅」は従来の組版規則で使われてきた「全角」という単位を、ボディが正方形でないフォントに対しても適用できるよう、字詰め方向の幅に限定し一般化したものである。「全角」は正方形であって、正方形のボディを持たない長体や扁平体の字詰め方向の幅を表現できないのに対し、全幅は字詰め方向の幅で定義されるので、長体や扁平体のフォントにも適用することができる。
+「全幅」は従来の組版規則で使われてきた「全角」という単位を、ボディーが正方形でないフォントに対しても適用できるよう、意味を字詰め方向の幅に限定し一般化したものである。「全角」という用語は、フォント独立の大きさを持つ正方形のボディおよびその一辺の幅を表しており、正方形のボディを持たない長体や扁平体の組版規則を表現できない。それに対し、「全幅」は各々のフォントに含まれる和字間隔（U+3000）の字詰め方向の幅を基準として定義されるので、多様なフォントに柔軟に適用することができる。大多数の日本語フォントは正方形のボディを持っており、それらのフォントに対して全幅は全角に一致する。
 
-大多数の日本語フォントでは全幅は全角の大きさに一致する。
-
-Unicode / CSS などでfullwidthという用語が等幅CJK文字の字詰め方向の幅として使用されているので、全幅の英訳としてfullwidthを使用する。
+Unicode / CSSなどではfullwidthという用語が等幅CJK文字の字詰め方向の幅として使用されているので、全幅の英訳として、この文章中で正確な定義を与えてfullwidthを使用する。
 
 この文書で全幅は次の幅の指定に使われる：
 - 段落先頭行の字下げの幅
 - 両端揃えを行う際の行長
 - その他、和欧間や分かち書きなどのアキを規定するときの基準
 
----- 
 ----
+
 ## 「全幅」の背景と議論
-「全幅」は従来の組版規則で使われてきた「全角」という単位を、ボディーが正方形でないフォントに対しても適用できるよう、字詰め方向の幅に限定し一般化したものである。
+「全幅」は従来の組版規則で使われてきた「全角」という単位を、ボディーが正方形でないフォントに対しても適用できるよう、意味を字詰め方向の幅に限定し一般化したものである。
 
 #### 目的
-JLReqやJIS X 4051など、従来の組版規則は、フォント中の和字が全角、すなわち正方形のボディを持っていることに依存して記述されている。大多数の日本語フォントはこの前提に当てはまるが、従来から長体や扁平体など、この前提から外れるフォントも存在していた。さらにデジタル化の進展により、漢字と仮名の幅が異なる長体フォントや、仮名がプロポーショナルであるフォントなど、多様性が増している。これらの多様なフォントに対しても可能な範囲で統一的な組版規則を記述できる用語体系が必要である。
+JLReqやJIS X 4051など、従来の組版規則は、フォント中の和字が全角、すなわち文字サイズに等しい大きさの正方形のボディを持っていることに依存して記述されている。大多数の日本語フォントはこの前提に当てはまるが、従来から長体や扁平体など、この前提から外れるフォントも存在していた。さらにデジタル化の進展により、漢字と仮名の幅が異なる長体フォントや、仮名がプロポーショナルであるフォントなど、多様性が増している。これらの多様なフォントに対しても可能な範囲で統一的な組版規則を記述できる用語体系が必要である。
 
 #### 定義
 JLReqにおいて全角という単位は次の場合に使われている：
@@ -53,4 +53,4 @@ JLReqにおいて全角という単位は次の場合に使われている：
 - 別の言葉で定義する
 - 定義せず、その度に説明する
 
-全角という概念には歴史があり、またフォントサイズとも結びついているため、この言葉を定義し直すと混乱が大きいと考えられた。また、この単位は全角を置き換える役目を持ち、ある程度頻繁に使われるので、用語を決めずに都度説明するよりも、用語を定義することは合理的であろう。ということでいくつかの案の中から「全幅」と仮に決めた。
+全角という概念には歴史があり、またフォントサイズとも結びついているため、この言葉を定義し直すと混乱が大きいと考えられた。また、この単位は全角を置き換える役目を持ち、ある程度頻繁に使われるので、用語を決めずに都度説明するよりも、用語を定義することは合理的であろうと考えられる。いくつかの案の中から「全幅」と仮に決めた。
