--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -163,15 +163,15 @@ JLReqでは，日本語の漢字や仮名について，その文字の外枠を
 
 以下のような場合に，この空白の調整が必要になる．
 
-a　中点類と括弧類等が連続する場合
+a　中点類と句読点又は括弧類（以下，句読点及び括弧類を併せて括弧類等という）が連続する場合
 
 b　和字間隔（全角スペース，U+3000）と括弧類等が連続する場合
 
-c　句読点や括弧類（以下，句読点と括弧類を併せて括弧類等という）が連続する場合
+c　括弧類等と括弧類等が連続する場合
 
 aとbは，原則として，中点類や和字間隔（全角スペース，U+3000）の前後に配置される括弧類等の後ろ又は前にある空白を削除する．一般には，次のようになる．
 
-1　文字の外枠が正方形である文字を使用している場合は，括弧類等の後ろ又は前を文字サイズの1/2だけ詰める（図〓）．
+1　文字の外枠が正方形である場合は，括弧類等の後ろ又は前を文字サイズの1/2だけ詰める（図〓）．
 
 2　1と同じであるが，さらに等幅の文字が変形されている場合は，詰める量を全幅（文字の字詰め方向の字幅）の1/2にする．
 
