--- a/drafts/.全角に替わる単位.md
+++ b/drafts/.全角に替わる単位.md
@@ -4,18 +4,18 @@
 ---
 
 ## 3.2　全幅の定義
-Jlreq-dでは文字を並べる方向（字詰め方向）の幅を表す単位として、従来から使われてきた「全角」に替えて、これをより一般化した単位「全幅」を次のように定義して使用する。
+Jlreq-dでは文字を並べる方向（字詰め方向）の長さを表す単位として、従来から使われてきた「全角」に替えて、これをより一般化した単位「全幅」を次のように定義して使用する。
 
 **「全幅とは、その場所に使用されているフォントに含まれる和字間隔（U+3000）文字のそのフォントサイズにおける字詰め方向の幅」**
 
-「全幅」は従来の組版規則で使われてきた「全角」という単位を、ボディーが正方形でないフォントに対しても適用できるよう、意味を字詰め方向の幅に限定し一般化したものである。「全角」という用語は、フォント独立の大きさを持つ正方形のボディおよびその一辺の幅を表しており、正方形のボディを持たない長体や扁平体の組版規則を表現できない。それに対し、「全幅」は各々のフォントに含まれる和字間隔（U+3000）の字詰め方向の幅を基準として定義されるので、多様なフォントに柔軟に適用することができる。大多数の日本語フォントは正方形のボディを持っており、それらのフォントに対して全幅は全角に一致する。
-
-Unicode / CSSなどではfullwidthという用語が等幅CJK文字の字詰め方向の幅として使用されているので、全幅の英訳として、この文章中で正確な定義を与えてfullwidthを使用する。
+従来の組版規則は、フォント中の和字が全角、すなわち文字サイズに等しい大きさの正方形のボディを持っていることに依存して記述されてきた。大多数の日本語フォントはこの前提に当てはまるが、従来から長体や扁平体などこの前提から外れるフォントが存在しており、さらにデジタル化の進展により多様性が増している。これらの多様なフォントに対して組版規則を記述できる用語体系が必要である。「全幅」は各々のフォントに含まれる和字間隔（U+3000）の字詰め方向の幅を基準として定義されるので、どのような日本語フォントに対しても定義することができる。
 
 この文書で全幅は次の幅の指定に使われる：
 - 段落先頭行の字下げの幅
 - 両端揃えを行う際の行長
 - その他、和欧間や分かち書きなどのアキを規定するときの基準
+
+Unicode / CSSなどではfullwidthという用語が等幅CJK文字の字詰め方向の幅として使用されており、全幅の定義とほぼ同じである。よって全幅の英訳として、文章中で正確な定義を与えてfullwidthを使用する。
 
 ----
 
@@ -47,6 +47,8 @@ JLReqにおいて全角という単位は次の場合に使われている：
 
 もう一つの方法は、特定の文字の幅をもって全幅の定義とする方法である。上の分析によると1, 2, 3 は和字間隔の字詰め方向の幅を基準とするのが合理的であり、この幅は5にも使うことができる。4は全体的な基準によらず、個別の約物の幅でよかろう。よって、幅の基準として全角空白を使用するのが合理的であろうと思われる。1, 2の場合には和字間隔文字が直接使われてきた。よってフォントがプロポーショナルな場合であっても、そのフォントの和字間隔文字の字詰め方向の幅、すなわち全幅が、タイプフェースデザイナーが意図した1, 2の場合の適切な幅である、と見なすことは合理的であろう。
 
+文字詰め方向と直角方向の長さについては、あまり使う場所が多くないので、その都度言葉で説明する。例えば「行間の最低限の基準は、和字間隔の文字詰め方向と直角方向の幅の半分」など。
+
 #### 名前
 この単位の名前として以下の意見があった
 - 全角という言葉を再定義する
@@ -54,3 +56,10 @@ JLReqにおいて全角という単位は次の場合に使われている：
 - 定義せず、その度に説明する
 
 全角という概念には歴史があり、またフォントサイズとも結びついているため、この言葉を定義し直すと混乱が大きいと考えられた。また、この単位は全角を置き換える役目を持ち、ある程度頻繁に使われるので、用語を決めずに都度説明するよりも、用語を定義することは合理的であろうと考えられる。いくつかの案の中から「全幅」と仮に決めた。
+
+#### 英語
+|日本語|英語|メモ|
+|---|---|---|
+|全幅|fullwidth|
+|全角|em / em square / em quad|単位としては用いない方針であるがもし必要であれば|
+|全角文字|fullwidth characters|文字名としての全角xxはfullwidth|
