--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -147,15 +147,26 @@ JLReqでは，日本語の漢字や仮名について，その文字の外枠を
 
 ### 3.4.1　括弧類・句読点等の一般的な配置方法
 
-括弧類や句読点は，文章の区切りを示すものである．したがって，括弧類の外側や句読点の後ろに，その区切りを示すために適当な空白を確保する必要がある．また，読者にとっても，慣れた方法が望ましいので，これまで一般的に行われている方法によるのがよいであろう．
 
-文字の外枠が正方形である文字を使用している場合は，通常は括弧類や句読点の字幅，つまり文字サイズを字幅として配置しいけばよい．その結果，字形のデザインにもよるが，括弧類の外側又は句読点の後ろに文字サイズの1/2程度の空白が確保される．等幅のフォントを変形した場合も，これにならって配置すればよい．
+句読点や括弧類などは，文や語句の区切りを示す，あるいは文や語句を括る役割をもっている．したがって，句読点の後ろや括弧類の外側に，その文の区切りや語句のまとまりを示すために適当な空白を確保する必要がある．
 
-注　文字を変形する場合，句点（“。”（U+3002））も変形することになる．この場合，丸の形も変形されるので，この句点だけは除外するという方法もある．
+一般に，和文用の括弧類や句読点の字幅は全幅である．文字の外枠（又はボディ）が正方形の場合の字幅は文字サイズとなる．つまり，そこには空白を含んでいる．
 
-プロポーショナルな文字の場合は，そのフォントで設定されている字幅で配置していけばよい．
+注　日本語の中に使用する括弧や句読点，中点類は，ラテン文字用の括弧などがある例もある．特に必要があるために使用する場合を除外し，和文用の括弧類，句読点，中点類を使用する．たとえば，“索引（index）を”の場合も，たまたま小括弧内の内容がラテン文字であるが，小括弧は和文と考えるからである．
 
-ただし，前述したように，見出し等では，括弧類や句読点の前後の空白について，やや詰める方法や，パーレン（小括弧）などでは，文字サイズの1/2ほど詰める配置方法をとる方法も行われている．
+したがって，字間を詰める又は空ける等の処理を行わない場合は，通常は，それぞれの字幅に従い，文字の外枠（又はボディ）を密着させて配置していけばよい．
+
+括弧類や句読点は，一般に字詰め方向について字幅の1/2か，ややそれより小さい字面を持っており，グリフには，（全幅であろうとなかろうと）その字幅の1/2の空白が組み込まれている．始め括弧類は前側，終わり括弧類や句読点は後ろ側に空白が組み込まれている．中点類は前後に字幅の1/4ずつの空白がある．
+
+なお，括弧類や句読点，中点類の字幅の1/2，又は1/4の空白について，フォントには，その空白を削除する機能が保持されている．括弧類や句読点が連続する場合などで括弧類や句読点の1/2の空白，中点類の1/4の空白を削除して配置する処理が必要になるケースがあるからである（括弧類や句読点が連続する場合は，次項で解説する）．
+
+以下は，方針によって特別に1/2の空白又は1/4の空白を削除する例である．
+
+例1：読点（U＋3001）　漢数字の3桁ごとの区切りに使用する場合，読点の後ろの1/2の空白を削除する．
+
+例2：中点（U＋30FB）　漢数字で小数点を示す場合，前及び後ろの1/4の空白を削除する．
+
+例3：小括弧（パーレン，U+FF08，U+FF09）　文中に使用する小括弧の1/2の空白を削除して配置する方法がある．
 
 ### 3.4.2　括弧等が連続した場合の処理
 
