--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -174,11 +174,16 @@ JLReqでは，日本語の漢字や仮名について，その文字の外枠を
 
 以下のような場合に，この空白の調整が必要になる．
 
-a　中点類と句読点又は括弧類（以下，句読点及び括弧類を併せて括弧類等という）が連続する場合
 
-b　和字間隔（全角スペース，U+3000）と括弧類等が連続する場合
+a　中点類と括弧類が連続する場合
 
-c　括弧類等と括弧類等が連続する場合
+注　中点類との連続　中点類と句読点が連続する組合せとなる例は少ない．この場合は，使用する状況にもよるが，それぞれの字幅で配置していけばよい（字間の調整は行わない）．
+
+b　和字間隔（全角スペース，U+3000）と括弧類が連続する場合
+
+注　和字間隔との連続　和字間隔（全角スペース，U+3000）と中点類，又は句読点が連続する組合せとなる例は少ない．この場合は，使用する状況にもよるが，それぞれの字幅で配置していけばよい（字間の調整は行わない）．
+
+c　括弧類又は句読点（以下，句読点及び括弧類を併せて括弧類等という）と括弧類等が連続する場合
 
 aとbは，原則として，中点類や和字間隔（全角スペース，U+3000）の前後に配置される括弧類等の後ろ又は前にある空白を削除する．一般には，次のようになる．
 
