--- a/drafts/5_望ましい行間.md
+++ b/drafts/5_望ましい行間.md
@@ -1,6 +1,8 @@
 
 ## 5.〓　どのような行間が望ましいか
 
+行間は
+
 ### 5.〓.1　行間の設定
 
 字詰め方向の字間は，通常は文字の外枠（ボディ）を密着させて配置していけばよい．これに対し，行送り方向の行間は，そのドキュメントの目的，内容，表示の方法，さらに読者などにより異なってくる．それぞれのドキュメントに応じて，何らかの値を設定しないといけない．また，行間の大きさは読みやすさに大きく影響する．ここでは，どのような行間は望ましいのか，まとめてみた．
