--- a/drafts/.フォントに対する要件.md
+++ b/drafts/.フォントに対する要件.md
@@ -1,9 +1,13 @@
 # 日本語フォントに対する要件
 
-基礎的情報
-必要なコンバイニング
-IVS
-必要なフォント機能（OpenTpeテーブルの説明ではなくて、どんな機能が必要か）
+- 基礎的情報
+- 縦書き横書き字形
+- 必要なコンバイニング動作（濁音、半濁音）
+- IVS
+- 必要なフォント機能（OpenTpeテーブルの説明ではなくて、どんな機能が必要か。ただ、OTの機能のリストは役にたつ）
+    - プロポーショナル幅
+    - 約物の空白を取る（コンテキストchws、無条件halt）
+    - などなど
 
 c.f.
 https://w3c.github.io/jlreq/jpan/#h_writing_styles
