--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -33,23 +33,20 @@ JLReqでは，主たる対象が書籍であり，以下が前提となってい
 
 - デジタルテキストでは，再表示がするケースも多く，すべての処理を自動で行うことが必要である．
 
-## 3.2　全角の定義
+## 3.2　基準となる単位の定義
+Jlreq-dでは文字を並べる方向（字詰め方向）の長さを表す単位として、従来から使われてきた「全角」に替えて、これをより一般化した単位「全幅（ぜんぷく）」を次のように定義して使用する。
 
-jlreq-dでは，全角という用語を以下のように定義し，使用する．この定義はJLReqとは異なる．
+**「全幅とは、その場所に使用されているフォントに含まれる和字間隔（U+3000）文字のそのフォントサイズにおける字詰め方向の幅」**
 
-全角：それぞれの文字の集合（フォント）に含まれている和字間隔（全角スペース，U+3000）の字幅の大きさ．ただし，和字間隔（全角スペース，U+3000）を含まない場合や不明の場合は，文字サイズとする．なお，“フォント”とは，フォールバックなどを使った複合的なフォント指定のある場合にはその総体を指す．
+従来の組版規則は、フォント中の和字が全角、すなわち文字サイズに等しい大きさの正方形のボディを持っていることに依存して記述されてきた。大多数の日本語フォントはこの前提に当てはまるが、従来から長体や扁平体などこの前提から外れるフォントが存在しており、さらにデジタル化の進展により多様性が増している。これらの多様なフォントに対して組版規則を記述できる単位として「全幅」を定義した。「全幅」は各々のフォントに含まれる和字間隔（U+3000）の字詰め方向の幅を基準として定義されるので、どのような日本語フォントに対しても定義、適用することができる。先に述べたように大多数の日本語フォントは正方形のボディを持っており、これらに対しては全幅と全角の長さは一致する。
 
-JLReqでは，日本語の漢字や仮名について，その文字の外枠を原則として正方形と考え，説明を行っている．jlreq-dでは，文字の外枠を正方形としない場合も含めて説明を行うことから，JLReqでの全角の定義を変更した．変更の内容は，文字サイズという絶対的な値から，文字の集合（フォント）に含まれている和字間隔（全角スペース，U+3000）の字幅とし，相対化した．また，全角はサイズの基準とする意味に限定した．JLReqの用語で意味していた正方形の文字の外枠をもっている文字の意味は削除し，この意味での全角という用語はjlreq-dでは使用しない．
+この文書で全幅は次の幅の指定に使われる：
+- 段落先頭行の字下げの幅
+- 両端揃えを行う際の行長
+- その他、和欧間や分かち書きなどのアキを規定するときの基準
 
-注：字幅　字幅とは，文字の外枠の字詰め方向（字を並べていく方向，縦組では上下方向，横組では左右方向となる）のサイズ．したがって，字幅の大きさは，縦組では文字の外枠の上下のサイズ，横組では文字の外枠の左右のサイズとなる．
+Unicode / CSSなどではfullwidthという用語が等幅CJK文字の字詰め方向の幅として使用されており、全幅の定義とほぼ同じである。よって全幅の英訳として、文章中で正確な定義を与えてfullwidthを使用する。
 
-多くの日本語フォントは，和字間隔（全角スペース，U+3000）を含め，漢字や仮名の文字の外枠（仮想ボディ）は，正方形である．この場合の全角の大きさは文字サイズとなる．したがって，多くの場合の全角の大きさは文字サイズと考えてよいが，例外があるということになる．
-
-文字の集合（フォント）で漢字や仮名の文字の外枠は正方形であっても，アラビア数字やラテン文字等では，文字の外枠は正方形でない例がある．この場合も，漢字や仮名の文字の外枠が正方形であれば，全角の大きさは文字サイズである．
-
-プロポーショナルなフォント，変形してデザインされたフォント，および変形された場合は，ある組方向では，全角の大きさは文字サイズとなるが，他方の組方向では，全角の大きさは文字サイズとは異なる値となる．
-
-二分，四分の大きさの基準は全角である．多くの場合は文字サイズの1/2又は1/4である．しかし，全角の大きさが文字サイズと異なるフォントでは，1/2又は1/4とならない．
 
 ## 3.3　漢字や仮名等の字間処理
 
