--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -33,7 +33,7 @@ JLReqでは，主たる対象が書籍であり，以下が前提となってい
 
 - デジタルテキストでは，再表示がするケースも多く，すべての処理を自動で行うことが必要である．
 
-## 3.2　基準となる単位の定義
+## 3.2　基準となる単位の定義（もっと良いタイトルを考える）
 Jlreq-dでは文字を並べる方向（字詰め方向）の長さを表す単位として、従来から使われてきた「全角」に替えて、これをより一般化した単位「全幅（ぜんぷく）」を次のように定義して使用する。
 
 **「全幅とは、その場所に使用されているフォントに含まれる和字間隔（U+3000）文字のそのフォントサイズにおける字詰め方向の幅」**
