--- a/drafts/.JLReqとの違い.md
+++ b/drafts/.JLReqとの違い.md
@@ -1,3 +1,7 @@
 # JLReqとの違い
 > ここにはJLReqからの読者のためにJLReqとの違いをまとめる。
-> 
+
+- 書籍を前提としない。ページを扱わない
+- 長体や扁平体を、変形によることなく直接カバー
+- 文字の外枠→ボディ
+- OpenType/CSSで一般的である用語がある場合はそちらを優先
