--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -297,17 +297,17 @@ c　中点類，和字間隔（この項では“中点等”という）
 
 注　行頭そろえなどでの行の調整処理　行の調整処理は，段落の配置処理で行頭そろえなどを選択した場合は，原則として必要としない．しかし，段落末尾行において，わずかな行長のはみ出しがあった場合，詰める調整を行うという処理方法もある．
 
-この行の調整処理を発生させる原因を少なくすることがまず必要である．以下のような方法がとられている（こうした事項は，逆にいえば，行長の過不足を発生させる（行の調整処理を発生させる）原因ともなる）．
+この行の調整処理を発生させる原因を少なくすることがまず必要である．以下のような方法がとられている．こうした処理を採用しない場合は，行長の過不足を発生させる（行の調整処理を発生させる）原因ともなる．
 
-1　正方形の文字の外枠（ボディ）の場合は，行長を文字サイズの整数倍に設定にする．等幅フォントや文字を変形した場合は，そのフォントの全幅の整数倍に設定する．
+1　原則として，漢字や仮名，句読点，括弧類等の字幅が全幅の場合，行長は全幅の整数倍に設定する．
 
-2　アラビア数字やラテン文字のように字幅が全幅でない文字以外に全角の文字を持っている場合がある．こうした場合，全角の文字を使用すれば，行の調整処理を発生させる原因を少なくすることができる．これは主に縦組で選択されている方法である．
+2　アラビア数字やラテン文字のように字幅が全幅でない文字を使用する場合がある．こうした場合，そのフォントに字幅が全幅の文字（全角文字）があれば，それを使用する．これは主に縦組で選択されている方法である．
 
-注　全角の文字の使用　全角の文字を横組又は縦組での文字を90度横転させて使用する場合，アラビア数字やラテン文字の字間が不必要に空いてしまうので望ましくない．こうした場合，プロポーショナルな文字や字幅が文字サイズの1/2のアラビア数字等を使用するのが原則である．
+注　全角文字の使用　全角文字を横組，又は縦組で文字を90度横転させて使用する場合，アラビア数字やラテン文字の字間が不必要に空いてしまうので望ましくない．こうした場合，行の調整処理が発生するとしてもプロポーショナルな文字や字幅が文字サイズの1/2のアラビア数字等を使用するのが原則である．
 
 3　句読点の行頭配置（分割禁止）を回避するためにブラ下ゲ組を採用する（〓項参照）．また，行頭配置を禁止（分割禁止）する文字を減らす（〓項参照）．
 
-4　句読点や括弧類などが連続する場合，それぞれの文字を字幅を全幅として配置していく．これも，あまり望ましい配置ではないが，選択肢としては考えられよう．
+4　句読点や括弧類などが連続する場合，空白の調整を行わないで，それぞれの文字の字幅を全幅として配置していく．これも，あまり望ましい配置ではないが，選択肢としては考えられよう（新聞等で採用されている方法である）．
 
 5　行頭に配置する括弧類の字幅を全幅とする（〓項参照）
 
