--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -333,9 +333,9 @@ c　中点類，和字間隔（この項では“中点等”という）
 
 3　中点類の前及び後ろを詰める．詰める限界値は全幅の1/4までとする．
 
-4　和文とラテン文字の間を全幅の1/4だけ空ける方針の場合，全幅の1/8まで詰める．
+4　和文とラテン文字及びアラビア数字の間を全幅の1/4だけ空ける方針の場合，全幅の1/8まで詰める．
 
-5　行末に配置する，以下の読点などの後ろを全幅の1/2だけ詰める．文中での句点（U+3002）の後ろは詰めないとする方針であっても，行末では，次に配置するテキストがないので，詰めてもそれほど影響がないという考え方による．文中での読点などの詰める限界値を全幅の1/4とする方針の場合も同様である．
+5　行末に配置する，以下の読点や句点などの後ろを全幅の1/2だけ詰める．文中での句点（U+3002）とピリオド（U+FF0E）の後ろは詰めないとする方針であっても，行末では，次に配置するテキストがないので，詰めてもそれほど影響がないという考え方による．文中での読点などの詰める限界値を全幅の1/4とする方針の場合も同様に読点や句点などの後ろを全幅の1/2だけ詰める．
 
 - 読点（U+3001）又はコンマ（U+FF0C）
 
@@ -367,7 +367,7 @@ c　中点類，和字間隔（この項では“中点等”という）
 
 - 平仮名又は片仮名と漢字が連続する字間
 
-3　2で処理で個々の字間での空ける量が一定量を超えた場合は，その他の分割禁止等の箇所等を含めて均等に空ける．
+3　2の処理で個々の字間での空ける量が一定量を超えた場合は，その他の分割禁止等の箇所等を含めて均等に空ける．
 
 空ける処理の詳細な1つの例を，Apendix〓に示した．
 
