--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -425,25 +425,23 @@ c　中点類，和字間隔（この項では“中点等”という）
 
 注　ブラ下ゲ組の採用　ブラ下ゲ組は，岩波書店の校正課長をしていた西島九州男さんが始めた方法で（1940年代の後半），その後，徐々に採用する出版社が増えていった．その主な目的は活字組版において句読点の行頭配置を避けるための“行の調整処理”の手間を少なくすることにあった．
 
-行末の句読点（括弧類を含む）の処理法には，以下のような方法がある（ここでも複雑さを避けるため文字の外枠が正方形の場合に限定する）．1行を25字詰として説明する．図〓の例を示す．
+行末の句読点（括弧類を含む）の処理法には，以下のような方法がある．1行を20字詰（全幅の20倍）として説明する（図〓参照）．
 
-a　句読点（括弧類を含む）が25字目にきた場合は，字幅が文字サイズの句読点を25字目に配置する．
+a　句読点（括弧類を含む）が20字目にきた場合は，字幅を全幅として，句読点などを20字目に配置する．
 
-b　句読点が26字目にきた場合は，字幅が文字サイズの句読点を26字目に配置する（ブラ下ゲ組）．
+b　句読点が21字目にきた場合は，字幅の句読点を21字目に配置する（ブラ下ゲ組）．
 
-c　句読点が26字目くるが，行の途中に約物等が連続，その他の理由から文字サイズの1/2のの半端が発生し，その処理として行末の句読点（括弧類を含む）の後ろの文字サイズの1/2の空白を削除し，25字目（正確には25.5字）の位置に配置する．
+c　句読点が21字目くるが，行の途中に約物等が連続，その他の理由から文字サイズの1/2のの半端が発生し，その処理として行末の句読点（括弧類を含む）の後ろにある全幅の1/2の空白を削除し，20字目の位置に配置する．
 
-d　以上のいずれの場合を含め，字幅が文字サイズの句読点を26字目に配置する（強制的なブラ下ゲ組ともよばれている）．
+このように，行末がある程度乱れることになる．行頭のラインはスタートであり，視覚的に重視される．これに対し，行末は，それほど重視されない，という考え方による．
 
-e　cだけでなく，aの場合も含めて行末の句読点（括弧類を含む）の後ろの空白を削除し，25字目（正確には24.5字の場合と25.5字の場合がある）の位置に配置する．
+注　強制的なブラ下ゲ組　以上のいずれの場合を含め，字幅が全幅の句読点を21字目に配置する（強制的なブラ下ゲ組ともよばれている）．元々のブラ下ゲ組の考え方とは異なる．
 
-活字組版におけるブラ下ゲ組では，a, b, cが混在することになる．コンピュータ組版でも，同様な処理が行われている．ブラ下ゲ組は，行の調整処理の手間を避けるためのものであり，混在することは許容できるされていた．
-
-eは，行頭（改行行頭及び折返し行頭）の括弧類の前の空白を削除する配置方法とそろえる方法であり，この行頭・行末のそろえを重視する場合に採用できる方法である．
+注　行末の句読点・括弧類の字幅を全幅の1/2とする　前述にaの場合も含め，行末の句読点（括弧類を含む）の後ろにある全幅の1/2の空白を削除し，20字目の位置に配置する．行頭の括弧類の前にある空白を削除するのにそろえる方法であり，行頭だけでなく，行末をきちんとそろえたい場合に採用される方法である．
 
 ところで，デジタルテキストでは，行の調整処理の手間は，それほど重視するものでないと考えれば，ブラ下ゲ組の採用は避けることができる．また，Webでは，領域が決まっている，あるいはスクロールの際に問題を発生させることもあるので，ブラ下ゲ組の採用は避けるるのが望ましいという考え方もある．
 
-ただし，ブラ下ゲ組を採用しないと行の調整処理が発生する箇所が多くなり，それだけ，字間の調整箇所が増える可能性がある．行長が短い場合など，行の調整処理での字間の調整箇所が目について，違和感を与えることもあるので，こうした場合は，ブラ下ゲ組を採用も考えれよう．（また，ブラ下ゲ組を採用しない方式では，段落末尾が“す。”又は“る。”のように1字だけになるケースが増えるという欠点もある．）
+ただし，ブラ下ゲ組を採用しないと行の調整処理が発生する箇所が多くなり，それだけ，字間の調整箇所が増える可能性がある．行長が短い場合など，行の調整処理での字間の調整箇所が目について，違和感を与えることもあるので，こうした場合は，ブラ下ゲ組を採用も考えられよう．（また，ブラ下ゲ組を採用しない方式では，段落末尾が“す。”又は“る。”のように1字だけになるケースが増えるという欠点もある．）
 
 なお，ブラ下ゲ組にしてよい約物は，句点と読点に限る，という意見が多くをしめており，それ以外の括弧類や中点をブラ下ゲ組にする例は，間違って処理したという例を除き，活字組版時代にはゼロに近かった．
 
