--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -303,7 +303,7 @@ c　中点類，和字間隔（この項では“中点等”という）
 
 2　アラビア数字やラテン文字のように字幅が全幅でない文字を使用する場合がある．こうした場合，そのフォントに字幅が全幅の文字（全角文字）があれば，それを使用する．これは主に縦組で選択されている方法である．
 
-注　全角文字の使用　全角文字を横組，又は縦組で文字を90度横転させて使用する場合，アラビア数字やラテン文字の字間が不必要に空いてしまうので望ましくない．こうした場合，行の調整処理が発生するとしてもプロポーショナルな文字や字幅が文字サイズの1/2のアラビア数字等を使用するのが原則である．
+注　全角文字の使用　全角文字を横組，又は縦組で文字を90度横転させて使用する場合，アラビア数字やラテン文字の字間が不必要に空いてしまうので望ましくない．こうした場合，行の調整処理が発生するとしてもプロポーショナル幅の文字や字幅が文字サイズの1/2のアラビア数字等を使用するのが原則である．
 
 3　句読点の行頭配置（分割禁止）を回避するためにブラ下ゲ組を採用する（〓項参照）．また，行頭配置を禁止（分割禁止）する文字を減らす（〓項参照）．
 
@@ -417,7 +417,7 @@ c　中点類，和字間隔（この項では“中点等”という）
 
 注　詰める処理を優先　従来は，詰める処理を優先して行い，詰める処理で解決できない場合に空ける処理を行うという方法がよく選択されていた．これは，できるだけボディを密着した配置方法を維持したいということもあるが，活字組版における技術的な制限からきていた．それは，活字組版では，詰める処理の方が，空ける処理より処理箇所が少なくて処理できるという事情があった．デジタルテキストでは，空ける処理は自動的に処理でき，かつ，微細な単位で空ける処理ができるので，詰める処理は行わないで，空ける処理のみで行の調整処理を行うという方法が考えられる．詰める処理は，処理箇所は少ないが，複雑な点もあり，空ける処理のみで行うということで，読みやすさの面での品質を保ちながら，ある程度の組版処理ルールの単純化を行うことが可能になる．
 
-注　プロポーショナルな文字の配置における行の調整処理　プロポーショナルな文字の配置における行の調整処理では，確立された方法はないといえよう．通常，プロポーショナルな文字の処理では，すべての行で行の調整処理が発生するので，字間の調整は行われる．そもそもプロポーショナルな文字の配置は，視覚的に文字間を最適にしようとする処理であるから，この字間の調整は望ましいとはいえない．このような事情を考慮すれば，行頭・行末そろえではなく，行頭そろえを選択するということがまず検討される必要があろう．
+注　プロポーショナル幅の文字の配置における行の調整処理　プロポーショナル幅の文字の配置における行の調整処理では，確立された方法はないといえよう．通常，プロポーショナル幅の文字の処理では，すべての行で行の調整処理が発生するので，字間の調整は行われる．そもそもプロポーショナル幅の文字の配置は，視覚的に文字間を最適にしようとする処理であるから，この字間の調整は望ましいとはいえない．このような事情を考慮すれば，行頭・行末そろえではなく，行頭そろえを選択するということがまず検討される必要があろう．
 
 ### 3.5.4　ブラ下ゲ組
 
