--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -233,7 +233,7 @@ c　中点類，和字間隔（この項では“中点等”という）
 
 この方式は，視覚的にそろって見えないが，段落先頭行でも2行目以下でも，行長の過不足は発生しない可能性がある．
 
-他に，段落の先頭は1番目，2行目は3番目の方式を採用した例も，児童書などの一部であったが，今日では，その方式はほとんで見掛けない．
+他に，段落の先頭は1番目，2行目は3番目の方式を採用した例は，ないわけではないが，少ない．
 
 従来の書籍では3番目の方式は多かったが，行の調整処理の自動処理が可能になり，ほとんど見掛けなくなった．今日では，行長が極端に短く，行の調整処理で，字間の乱れが多くなり，それを避けるるために採用している新聞などを除外して，使用例は少なくなっている．
 
