--- a/drafts/3_行の組版処理.md
+++ b/drafts/3_行の組版処理.md
@@ -1,6 +1,6 @@
 # 3　行の組版処理
 
-## 3.1　字詰め方向に文字を配置する長さの単位（もっと良いタイトルを考える）
+## 3.1　「全幅」の定義
 
 Jlreq-dでは文字を並べる方向（字詰め方向）の長さを表す単位として、従来から使われてきた「全角」に替えて、これをより一般化した単位「全幅（ぜんぷく）」を次のように定義して使用する。
 
