Update and rename 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md to 2. 日本語デジタルテキスト入門（Introduction to Japanese Digital Text）.md
理論的基礎というよりは、普通の人にも読んで欲しいので「入門 / Introduction to」をタイトルに

--- a/drafts/2. 日本語デジタルテキスト入門（Introduction to Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキスト入門（Introduction to Japanese Digital Text）.md
@@ -1,4 +1,6 @@
-# 2　日本語デジタルテキストの作り方
+# 2　日本語デジタルテキスト入門（Introduction to Japanese Digital Text）
+> 理論的基礎というよりは、普通の人にも読んで欲しいので「入門 / Introduction to」を使う。
+
 > この章で、日本語デジタルテキストの基礎、および組版・テキストレイアウトの観点での日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。
 
 前章で述べたように、デジタルテキストにおいては、書き手が組版の大きな部分を担っているので、書き手が意図通りのデジタルテキストを作る方法を知っていることが重要である。
