1. 初めに (Introduction).md を更新

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -56,6 +56,8 @@
 ### 紙面のコストがない
 歴史的に書写や印刷において、紙のコストが大きく、それが組版に大きな影響を与えてきた。限られたページ数の中に情報を詰め込むための工夫などはその影響の例である。デジタルテキストではこのような工夫は必要がない。
 
+> 気が付いたことのメモ。書籍ではコストのためカラーページが巻頭にまとめられることがある。デジタルではその必要がない。
+
 ### 画面の大きさによる制約を受ける
 対して、デジタルテキストは、種々の画面のサイズがあるため、画面の大きさに応じた工夫が必要となる。かつ、最終的にどのような画面で読まれるかわからないので、一つの設計を全ての場合に当てはめることができない。
 
